Добавил сущности для корзины и связанные с ними типы данных.
