# basket-service/domain/money/entity.go
@@ -1,0 +1,6 @@
+package money
+
+type Money struct {
+	Amount   string
+	Currency string
+}
